--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,5 @@
-[package]
-name = "games"
-version = "0.1.0"
-authors = ["Gwennan Eliezer <naeiogalaxy@gmail.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-console = "0.15"
+[workspace]
+members = [
+    "terminity",
+    "terminity_widgets",
+]
