--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-proc-macro-error = { version = "1", default-features = false }
+proc-macro-error = { version = "1" }
+syn = {version = "1.0", features = ["derive"]}
+quote = "1.0"
 #proc_macro_error = "1.0"
