--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -8,6 +8,9 @@ proc-macro = true
 
 [dependencies]
 proc-macro-error = { version = "1" }
-syn = {version = "1.0", features = ["derive"]}
+syn = {version = "1.0", features = ["full", "parsing"]}
 quote = "1.0"
+proc-macro-crate = "1.3.0"
+proc-macro2 = "*"
+crossterm = "*"
 #proc_macro_error = "1.0"
