--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -11,6 +11,6 @@ default-run = "terminity"
 terminity_widgets = { version = "*", path = "../terminity_widgets" }
 crossterm = { version = "0.25", features = ["event-stream"] }
 rand = "*"
-console = "0.15"
+#console = "0.15"
 structopt = "0.3"
 lazy_static = "1.4"
