--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,7 @@
 #edition = "2021"
 max_width = 100
 attr_fn_like_width = 100
+use_small_heuristics = "Max"
 binop_separator = "Front"
 wrap_comments = true
 error_on_line_overflow = true
