--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -13,4 +13,6 @@ quote = "1.0"
 proc-macro-crate = "1.3.0"
 proc-macro2 = "*"
 crossterm = "*"
-#proc_macro_error = "1.0"
+
+[dev-dependencies]
+terminity_widgets = { version = "*", path = "../terminity_widgets" }
