--- a/terminity_widgets/Cargo.toml
+++ b/terminity_widgets/Cargo.toml
@@ -10,3 +10,6 @@ terminity_widgets_proc = { version = "*", path = "../terminity_widgets_proc" }
 unicode-segmentation = "1.10"
 strip-ansi-escapes = "0.1"
 crossterm = "0.26"
+
+[dev-dependencies]
+format = "0.2.4"
