--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -1,8 +1,18 @@
 [package]
 name = "terminity"
 version = "0.1.0"
-authors = ["Gwennan Eliezer <naeiogalaxy@gmail.com>"]
+authors = ["Naeio <naeiogalaxy@gmail.com>"]
 edition = "2021"
+description = "Enviroment for the best terminal UI quality for games"
+readme = "../README.md"
+#homepage = 
+repository = "https://github.com/NeoGalaxy/terminity"
+license = "BSD-4-Clause"
+#license-file = "../LICENSE"
+keywords = ["TUI", "UI", "terminal", "game-development"]
+categories = ["game-development", "games"]
+publish = ["terminity"]
+
 default-run = "game"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
