--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -11,7 +11,7 @@ license = "BSD-4-Clause"
 #license-file = "../LICENSE"
 keywords = ["TUI", "UI", "terminal", "game-development"]
 categories = ["game-development", "games"]
-publish = ["terminity"]
+#publish = ["terminity_widgets_proc"]
 
 [lib]
 proc-macro = true
@@ -24,5 +24,5 @@ proc-macro-crate = "1.3.0"
 proc-macro2 = "*"
 crossterm = "*"
 
-[dev-dependencies]
-terminity_widgets = { version = "*", path = "../terminity_widgets" }
+#[dev-dependencies]
+#terminity_widgets = "0.1"
