--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -21,8 +21,8 @@ proc-macro-error = { version = "1" }
 syn = {version = "1.0", features = ["full", "parsing"]}
 quote = "1.0"
 proc-macro-crate = "1.3.0"
-proc-macro2 = "*"
-crossterm = "*"
+proc-macro2 = "1.0"
 
 #[dev-dependencies]
+#crossterm = "0.26"
 #terminity_widgets = "0.1"
