--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -11,7 +11,7 @@ license = "BSD-4-Clause"
 #license-file = "../LICENSE"
 keywords = ["TUI", "UI", "terminal", "game-development"]
 categories = ["game-development", "games"]
-publish = ["terminity"]
+#publish = ["terminity"]
 
 default-run = "game"
 
