--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -20,6 +20,6 @@ default-run = "game"
 [dependencies]
 terminity_widgets = { version = "0.1", path = "../terminity_widgets" }
 crossterm = { version = "0.26", features = ["event-stream"] }
-rand = "*"
+rand = "0.8.5"
 structopt = "0.3"
 lazy_static = "1.4"
