--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -11,7 +11,7 @@ license = "BSD-4-Clause"
 #license-file = "../LICENSE"
 keywords = ["TUI", "UI", "terminal", "game-development"]
 categories = ["game-development", "games"]
-#publish = ["terminity_widgets_proc"]
+publish = ["terminity_widgets_proc"]
 
 [lib]
 proc-macro = true
@@ -23,6 +23,6 @@ quote = "1.0"
 proc-macro-crate = "1.3.0"
 proc-macro2 = "1.0"
 
-#[dev-dependencies]
-#crossterm = "0.26"
-#terminity_widgets = { version = "0.1", path = "../terminity_widgets" }
+[dev-dependencies]
+crossterm = "0.26"
+terminity_widgets = { version = "0.1", path = "../terminity_widgets" }
