--- a/terminity_widgets/Cargo.toml
+++ b/terminity_widgets/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 repository = "https://github.com/NeoGalaxy/terminity"
 license = "BSD-4-Clause"
 #license-file = "../LICENSE"
-keywords = ["TUI", "UI", "terminal", "game-development"]
+keywords = ["TUI", "UI", "terminal", "game-development", "terminity"]
 categories = ["game-development", "games"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
