--- a/terminity_widgets_proc/Cargo.toml
+++ b/terminity_widgets_proc/Cargo.toml
@@ -19,8 +19,12 @@ proc-macro = true
 proc-macro-error = { version = "1" }
 syn = {version = "1.0", features = ["full", "parsing"]}
 quote = "1.0"
+unicode-segmentation = "1.10"
+strip-ansi-escapes = "0.1"
 proc-macro-crate = "1.3.0"
 proc-macro2 = "1.0"
+darling = "0.14.4"
+convert_case = "0.6.0"
 
 [dev-dependencies]
 crossterm = "0.26"
