--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -22,3 +22,4 @@ crossterm = { version = "0.26", features = ["event-stream"] }
 rand = "0.8.5"
 structopt = "0.3"
 lazy_static = "1.4"
+format = "0.2.4"
