--- a/terminity_runtime/Cargo.toml
+++ b/terminity_runtime/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "terminity"
+name = "terminity_runtime"
 version = "0.1.0"
 authors = ["Naeio <naeiogalaxy@gmail.com>"]
 edition = "2021"
-description = "Enviroment for the best terminal UI quality for games"
+description = "Runtime to run terminity projects"
 readme = "../README.md"
 #homepage = 
 repository = "https://github.com/NeoGalaxy/terminity"
@@ -15,11 +15,8 @@ categories = ["game-development", "games"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-terminity_widgets = { version = "0.1", path = "../terminity_widgets" }
+terminity = { version = "0.1", path = "../terminity" }
 crossterm = { version = "0.26", features = ["event-stream"] }
 rand = "0.8.5"
 structopt = "0.3"
 lazy_static = "1.4"
-byteorder = "1.5.0"
-bincode = "1.3.3"
-serde = {version = "1.0", features = ["derive"]}
