--- a/terminity_runtime/Cargo.toml
+++ b/terminity_runtime/Cargo.toml
@@ -19,3 +19,6 @@ crossterm = { version = "0.26", features = ["event-stream"] }
 rand = "0.8.5"
 clap = { version = "4.4", features = ["derive"] }
 libloading = "0.8"
+bincode = "1.3.3"
+
+anyhow = "1.0"
