remove crate terminity_widgets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 members = [
     "terminity",
     "terminity_runtime",
-    "terminity_widgets",
-    "terminity_widgets_proc",
+    "terminity_proc",
 
     "terminity/examples/hello_world",
 ]
