--- a/terminity_runtime/Cargo.toml
+++ b/terminity_runtime/Cargo.toml
@@ -20,4 +20,6 @@ clap = { version = "4.4", features = ["derive"] }
 libloading = "0.8"
 bincode = "1.3.3"
 
+tokio = "1.36.0"
+directories = "5.0.1"
 anyhow = "1.0"
