--- a/terminity_runtime/Cargo.toml
+++ b/terminity_runtime/Cargo.toml
@@ -14,12 +14,12 @@ categories = ["game-development", "games"]
 
 [dependencies]
 terminity = { version = "0.1", path = "../terminity" }
-crossterm = { version = "0.26", features = ["event-stream"] }
+crossterm = { version = "0.27", features = ["event-stream"] }
 rand = "0.8.5"
 clap = { version = "4.4", features = ["derive"] }
 libloading = "0.8"
 bincode = "1.3.3"
 
-tokio = "1.36.0"
+tokio = { version = "1", features = ["full"] }
 directories = "5.0.1"
 anyhow = "1.0"
