--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -22,6 +22,7 @@ lazy_static = "1.4"
 byteorder = "1.5.0"
 bincode = "1.3.3"
 serde = {version = "1.0", features = ["derive"]}
+concat-idents = "1.1.5"
 
 # for widgets
 terminity_proc = { version = "0.1", path = "../terminity_proc" }
