--- a/terminity_runtime/Cargo.toml
+++ b/terminity_runtime/Cargo.toml
@@ -19,7 +19,13 @@ rand = "0.8.5"
 clap = { version = "4.4", features = ["derive"] }
 libloading = "0.8"
 bincode = "1.3.3"
+serde = "1.0"
+serde_json = "1.0"
+postcard = "1.0.8"
+rfd = "0.13.0"
+ouroboros = "0.18"
 
+kanal = "0.1.0-pre8"
 tokio = { version = "1", features = ["full"] }
 directories = "5.0.1"
 anyhow = "1.0"
