--- a/terminity/Cargo.toml
+++ b/terminity/Cargo.toml
@@ -17,7 +17,6 @@ categories = ["game-development", "games"]
 [dependencies]
 crossterm = { version = "0.27", features = ["event-stream"] }
 rand = "0.8.5"
-structopt = "0.3"
 lazy_static = "1.4"
 byteorder = "1.5.0"
 bincode = "1.3.3"
@@ -25,9 +24,8 @@ serde = {version = "1.0", features = ["derive"]}
 concat-idents = "1.1.5"
 
 # for widgets
+unicode-width = "0.1.5"
 terminity_proc = { version = "0.1", path = "../terminity_proc" }
-unicode-segmentation = "1.10"
-strip-ansi-escapes = "0.1"
 
 [dev-dependencies]
 format = "0.2.4"
