--- a/terminity_proc/Cargo.toml
+++ b/terminity_proc/Cargo.toml
@@ -24,6 +24,7 @@ proc-macro-crate = "1.3.0"
 proc-macro2 = "1.0"
 darling = "0.14.4"
 convert_case = "0.6.0"
+unicode-width = "0.1.5"
 
 [dev-dependencies]
 crossterm = "0.26"
